--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <!-- 익스호환성 / 익스를 엣지로 렌더링해라(웹문서 표시하는것을 렌더링한다라고함) -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- 반응형 / 너비는 디바이스너비에 따라라, 초기화-배율(처음배율은 1배)-글자 -->
     <!-- 모바일에서 글자가 줄어드는 것을 방지함 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- 검색로봇이 글어갈수 잇냐 없냐(개방할것인가 안할것인가) -->
-    <meta name="robot" content="index,nofollow">
+    <meta name="robot" content="index,nofollow" />
     <!-- 검색엔진에 설명글 /검색시에 밑에 나오는 글긔 -->
-    <meta name="description" content="유성문화관광 홈페이지입니다.">
-    <meta name="author" content="김민정">
+    <meta name="description" content="유성문화관광 홈페이지입니다." />
+    <meta name="author" content="김민정" />
     <!-- 검색 키워드 -->
-    <meta name="keyword" content="유성,유성문화관광,프로젝트">
+    <meta name="keyword" content="유성,유성문화관광,프로젝트" />
 
-    <meta property="og:title" content="유성문화관광, 프로젝트">
-    <meta property="og:description" content="김민정의 반응형 프로젝트입니다.">
-    <meta property="og:url" content="https://kimminjung96.github.io/tech/page/project1/index.html">
-    <meta property="og:image" content="images/og_img.png">
+    <meta property="og:title" content="유성문화관광, 프로젝트" />
+    <meta property="og:description" content="김민정의 반응형 프로젝트입니다." />
+    <meta property="og:url" content="https://kimminjung96.github.io/tech/page/project1/index.html" />
+    <meta property="og:image" content="images/og_img.png" />
 
     <title>유성구 문화관광</title>
 
-    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="images/favicon/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="images/favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <a href="#main" class="skip_menu">메인화면 바로가기</a>
@@ -82,8 +82,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>온천도시 유성</h2>
-                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="">
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">유성온천이란?</a></h3>
@@ -111,8 +111,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>유성명소</h2>
-                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="">
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">관광TOP10</a></h3>
@@ -139,8 +139,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>추천여행</h2>
-                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="">
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">유성! 추천여행</a></h3>
@@ -171,8 +171,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>축제·공연</h2>
-                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="">
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">유성온천문화축제</a></h3>
@@ -198,8 +198,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>숙박·음식·쇼핑</h2>
-                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="">
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">숙박</a></h3>
@@ -234,8 +234,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>여행 가이드</h2>
-                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="">
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">공지사항</a></h3>
@@ -255,7 +255,7 @@
             </ul>
           </nav>
           <div class="sitemap">
-            <a href="#"><img src="images/menu.png" alt="사이트맵페이지로 이동"></a>
+            <a href="#"><img src="images/menu.png" alt="사이트맵페이지로 이동" /></a>
           </div>
         </div>
       </header>
@@ -265,7 +265,7 @@
         <div class="inner">
           <div class="slider">
             <div class="slider_img">
-              <img src="images/main_banner1.jpg" alt="메인슬라이더 베너">
+              <img src="images/main_banner1.jpg" alt="메인슬라이더 베너" />
             </div>
             <!-- <div class="subject">
               <p class="S_Core">
@@ -283,12 +283,12 @@
         </div>
         <div class="main_btn">
           <div class="btn_right">
-            <div class="btn_title1"><img src="images/mvisual_btn1.png" alt="과학관광 코스 모달"></div>
-            <img src="images/mvisual_btn1_bg.png" alt="">
+            <div class="btn_title1"><img src="images/mvisual_btn1.png" alt="과학관광 코스 모달" /></div>
+            <img src="images/mvisual_btn1_bg.png" alt="" />
           </div>
           <div class="btn_left">
-            <div class="btn_title2"><img src="images/mvisual_btn2.png" alt="과학관광 코스 모달"></div>
-            <img src="images/mvisual_btn2_bg.png" alt="">
+            <div class="btn_title2"><img src="images/mvisual_btn2.png" alt="과학관광 코스 모달" /></div>
+            <img src="images/mvisual_btn2_bg.png" alt="" />
           </div>
         </div>
       </section>
@@ -309,7 +309,7 @@
           <ul class="df">
             <li>
               <a href="#">
-                <div class="thumb"><img src="images/mcont1_img01.jpg" alt=""></div>
+                <div class="thumb"><img src="images/mcont1_img01.jpg" alt="" /></div>
                 <div class="txt">
                   <b> 우리의 추억, 대전 엑스포 </b>
                   <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
@@ -318,7 +318,7 @@
             </li>
             <li>
               <a href="#">
-                <div class="thumb"><img src="images/mcont1_img01.jpg" alt=""></div>
+                <div class="thumb"><img src="images/mcont1_img01.jpg" alt="" /></div>
                 <div class="txt">
                   <b> 우리의 추억, 대전 엑스포 </b>
                   <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
@@ -327,7 +327,7 @@
             </li>
             <li>
               <a href="#">
-                <div class="thumb"><img src="images/mcont1_img01.jpg" alt=""></div>
+                <div class="thumb"><img src="images/mcont1_img01.jpg" alt="" /></div>
                 <div class="txt">
                   <b> 우리의 추억, 대전 엑스포 </b>
                   <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
@@ -336,7 +336,7 @@
             </li>
             <li>
               <a href="#">
-                <div class="thumb"><img src="images/mcont1_img01.jpg" alt=""></div>
+                <div class="thumb"><img src="images/mcont1_img01.jpg" alt="" /></div>
                 <div class="txt">
                   <b> 우리의 추억, 대전 엑스포 </b>
                   <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
@@ -345,7 +345,7 @@
             </li>
             <li>
               <a href="#">
-                <div class="thumb"><img src="images/mcont1_img01.jpg" alt=""></div>
+                <div class="thumb"><img src="images/mcont1_img01.jpg" alt="" /></div>
                 <div class="txt">
                   <b> 우리의 추억, 대전 엑스포 </b>
                   <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
@@ -359,18 +359,95 @@
       <section id="location">
         <h4 class="title S_Core">생생<span>VR</span></h4>
         <p>VR사이버 투어로 사계절 자연풍경 가득한 도시의 매력을 생생하게 경험하세요!</p>
-        <div class="inner"></div>
+        <div class="inner">
+          <div class="vr df">
+            <div class="vr_slider pr">
+              <div class="txt">
+                <b><span>VR사이버투어</span> 유림공원</b>
+                <p>산책하기 좋은 명품 유림공원, 추천! 언택트 관광지</p>
+                <ul class="list">
+                  <li><a href="#">대전 유성구 어은로 27</a></li>
+                  <li><a href="#">042-611-2445</a></li>
+                </ul>
+              </div>
+
+              <ul class="vr_btn df">
+                <li>
+                  <a href="#"><span></span> 지상 VR</a>
+                </li>
+                <li>
+                  <a href="#"><span></span> 항공 VR</a>
+                </li>
+              </ul>
+            </div>
+            <div class="vr_map pr">
+              <img src="images/map.png" alt="" />
+            </div>
+          </div>
+        </div>
       </section>
       <!-- //id="location" -->
       <section id="select">
         <h4 class="title S_Core">요기<span>조기</span></h4>
         <p>맛있는 식도락 여행부터 맞춤관광까지 하루 더 머물고 싶은 유성구</p>
-        <div class="inner"></div>
+        <div class="inner">
+          <div class="df">
+            <div class="n1">
+              <h5>맞춤관광</h5>
+              <p>
+                유성구에서 어떤 여행을<br />
+                기대하고 계시나요?
+              </p>
+            </div>
+            <ul class="n2 df">
+              <li>
+                <a href="#">
+                  <h5>우리동네지도</h5>
+                  <p>우리동네에 즐거움이 한가득!</p>
+                  <div class="more_btn">
+                    <a href="#">자세히보기</a>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <h5>유성구 식도락</h5>
+                  <p>유성구 맛집을 찾아서</p>
+                  <div class="more_btn">
+                    <a href="#">자세히보기</a>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <h5>자전거 100리 길</h5>
+                  <p>자전거를 타고 느끼는 도시의 매력</p>
+                  <div class="more_btn">
+                    <a href="#">자세히보기</a>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <h5>하루를 부탁해</h5>
+                  <p>유성구에서 편안한 하루</p>
+                  <div class="more_btn">
+                    <a href="#">자세히보기</a>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
       <!-- //id="select" -->
       <section id="quick">
         <h4>quick</h4>
-        <div class="inner"></div>
+        <div class="inner">
+          <div class="notice">
+            <h5>공지사항</h5>
+          </div>
+        </div>
       </section>
       <!-- //id="quick" -->
       <footer><div class="inner"></div></footer>
