--- a/index.html
+++ b/index.html
@@ -17,27 +17,89 @@
 
     <meta property="og:title" content="유성문화관광, 프로젝트" />
     <meta property="og:description" content="김민정의 반응형 프로젝트입니다." />
-    <meta property="og:url" content="https://kimminjung96.github.io/tech/page/project1/index.html" />
+    <meta
+      property="og:url"
+      content="https://kimminjung96.github.io/tech/page/project1/index.html"
+    />
     <meta property="og:image" content="images/og_img.png" />
 
     <title>유성구 문화관광</title>
 
-    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="images/favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="images/favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="images/favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="images/favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="images/favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="images/favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="images/favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="images/favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/favicon/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="images/favicon/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="images/favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="images/favicon/favicon-16x16.png"
+    />
     <link rel="manifest" href="images/favicon/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png" />
+    <meta
+      name="msapplication-TileImage"
+      content="images/favicon/ms-icon-144x144.png"
+    />
     <meta name="theme-color" content="#ffffff" />
 
     <link rel="stylesheet" href="css/reset.css" />
@@ -82,7 +144,10 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>온천도시 유성</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <p>
+                        다함께 더 좋은 유성!<br />과학과 온천의 관광도시
+                        유성입니다.
+                      </p>
                       <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
@@ -111,7 +176,10 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>유성명소</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <p>
+                        다함께 더 좋은 유성!<br />과학과 온천의 관광도시
+                        유성입니다.
+                      </p>
                       <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
@@ -139,7 +207,10 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>추천여행</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <p>
+                        다함께 더 좋은 유성!<br />과학과 온천의 관광도시
+                        유성입니다.
+                      </p>
                       <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
@@ -171,7 +242,10 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>축제·공연</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <p>
+                        다함께 더 좋은 유성!<br />과학과 온천의 관광도시
+                        유성입니다.
+                      </p>
                       <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
@@ -198,7 +272,10 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>숙박·음식·쇼핑</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <p>
+                        다함께 더 좋은 유성!<br />과학과 온천의 관광도시
+                        유성입니다.
+                      </p>
                       <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
@@ -234,7 +311,10 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>여행 가이드</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <p>
+                        다함께 더 좋은 유성!<br />과학과 온천의 관광도시
+                        유성입니다.
+                      </p>
                       <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
@@ -255,13 +335,18 @@
             </ul>
           </nav>
           <div class="sitemap">
-            <a href="#"><img src="images/menu.png" alt="사이트맵페이지로 이동" /></a>
+            <a href="#"
+              ><img src="images/menu.png" alt="사이트맵페이지로 이동"
+            /></a>
           </div>
         </div>
       </header>
 
       <section id="main">
-        <h4 class="S_Core">모이고 떠들고 먹고 즐기는<span class="ir_pm tit1">천년온천</span> <span>유성의</span> <span class="ir_pm tit2">도시미학</span></h4>
+        <h4 class="S_Core">
+          모이고 떠들고 먹고 즐기는<span class="ir_pm tit1">천년온천</span>
+          <span>유성의</span> <span class="ir_pm tit2">도시미학</span>
+        </h4>
         <div class="inner">
           <div class="slider">
             <div class="slider_img">
@@ -283,11 +368,15 @@
         </div>
         <div class="main_btn">
           <div class="btn_right">
-            <div class="btn_title1"><img src="images/mvisual_btn1.png" alt="과학관광 코스 모달" /></div>
+            <div class="btn_title1">
+              <img src="images/mvisual_btn1.png" alt="과학관광 코스 모달" />
+            </div>
             <img src="images/mvisual_btn1_bg.png" alt="" />
           </div>
           <div class="btn_left">
-            <div class="btn_title2"><img src="images/mvisual_btn2.png" alt="과학관광 코스 모달" /></div>
+            <div class="btn_title2">
+              <img src="images/mvisual_btn2.png" alt="과학관광 코스 모달" />
+            </div>
             <img src="images/mvisual_btn2_bg.png" alt="" />
           </div>
         </div>
@@ -309,7 +398,9 @@
           <ul class="df">
             <li>
               <a href="#">
-                <div class="thumb"><img src="images/mcont1_img01.jpg" alt="" /></div>
+                <div class="thumb">
+                  <img src="images/mcont1_img01.jpg" alt="" />
+                </div>
                 <div class="txt">
                   <b> 우리의 추억, 대전 엑스포 </b>
                   <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
@@ -318,7 +409,9 @@
             </li>
             <li>
               <a href="#">
-                <div class="thumb"><img src="images/mcont1_img01.jpg" alt="" /></div>
+                <div class="thumb">
+                  <img src="images/mcont1_img01.jpg" alt="" />
+                </div>
                 <div class="txt">
                   <b> 우리의 추억, 대전 엑스포 </b>
                   <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
@@ -327,7 +420,9 @@
             </li>
             <li>
               <a href="#">
-                <div class="thumb"><img src="images/mcont1_img01.jpg" alt="" /></div>
+                <div class="thumb">
+                  <img src="images/mcont1_img01.jpg" alt="" />
+                </div>
                 <div class="txt">
                   <b> 우리의 추억, 대전 엑스포 </b>
                   <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
@@ -336,7 +431,9 @@
             </li>
             <li>
               <a href="#">
-                <div class="thumb"><img src="images/mcont1_img01.jpg" alt="" /></div>
+                <div class="thumb">
+                  <img src="images/mcont1_img01.jpg" alt="" />
+                </div>
                 <div class="txt">
                   <b> 우리의 추억, 대전 엑스포 </b>
                   <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
@@ -345,7 +442,9 @@
             </li>
             <li>
               <a href="#">
-                <div class="thumb"><img src="images/mcont1_img01.jpg" alt="" /></div>
+                <div class="thumb">
+                  <img src="images/mcont1_img01.jpg" alt="" />
+                </div>
                 <div class="txt">
                   <b> 우리의 추억, 대전 엑스포 </b>
                   <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
@@ -358,7 +457,10 @@
       <!-- //id="pick" -->
       <section id="location">
         <h4 class="title S_Core">생생<span>VR</span></h4>
-        <p>VR사이버 투어로 사계절 자연풍경 가득한 도시의 매력을 생생하게 경험하세요!</p>
+        <p>
+          VR사이버 투어로 사계절 자연풍경 가득한 도시의 매력을 생생하게
+          경험하세요!
+        </p>
         <div class="inner">
           <div class="vr df">
             <div class="vr_slider pr">
@@ -398,6 +500,36 @@
                 유성구에서 어떤 여행을<br />
                 기대하고 계시나요?
               </p>
+              <div class="select_wrap">
+                <select>
+                  <option value="">언제?</option>
+                  <option value="봄">봄</option>
+                  <option value="여름">여름</option>
+                  <option value="가을">가을</option>
+                  <option value="겨율">겨율</option>
+                </select>
+              </div>
+              <div class="select_wrap">
+                <select>
+                  <option value="">누구와?</option>
+                  <option value="혼자">혼자</option>
+                  <option value="가족">가족</option>
+                  <option value="친구">친구</option>
+                  <option value="연인">연인</option>
+                  <option value="학교/단체">학교/단체</option>
+                </select>
+              </div>
+              <select>
+                <option value="">무엇을?</option>
+                <option value="핫플레이스">핫플레이스</option>
+                <option value="온천여행">온천여행</option>
+                <option value="체험">체험</option>
+                <option value="전시">전시</option>
+                <option value="자연산책">자연산책</option>
+                <option value="도시산책">도시산책</option>
+                <option value="레저">레저</option>
+                <option value="축제/행사">축제/행사</option>
+              </select>
             </div>
             <ul class="n2 df">
               <li>
