--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GBWVDRHRTR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-GBWVDRHRTR");
+    </script>
     <meta charset="UTF-8">
     <!-- 익스호환성 / 익스를 엣지로 렌더링해라(웹문서 표시하는것을 렌더링한다라고함) -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,89 +28,27 @@
 
     <meta property="og:title" content="유성문화관광, 프로젝트">
     <meta property="og:description" content="김민정의 반응형 프로젝트입니다.">
-    <meta
-      property="og:url"
-      content="https://kimminjung96.github.io/tech/page/project1/index.html"
-  >
+    <meta property="og:url" content="https://kimminjung96.github.io/tech/page/project1/index.html">
     <meta property="og:image" content="images/og_img.png">
 
     <title>유성구 문화관광</title>
 
-    <link
-      rel="apple-touch-icon"
-      sizes="57x57"
-      href="images/favicon/apple-icon-57x57.png"
-  >
-    <link
-      rel="apple-touch-icon"
-      sizes="60x60"
-      href="images/favicon/apple-icon-60x60.png"
-  >
-    <link
-      rel="apple-touch-icon"
-      sizes="72x72"
-      href="images/favicon/apple-icon-72x72.png"
-  >
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="images/favicon/apple-icon-76x76.png"
-  >
-    <link
-      rel="apple-touch-icon"
-      sizes="114x114"
-      href="images/favicon/apple-icon-114x114.png"
-  >
-    <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="images/favicon/apple-icon-120x120.png"
-  >
-    <link
-      rel="apple-touch-icon"
-      sizes="144x144"
-      href="images/favicon/apple-icon-144x144.png"
-  >
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="images/favicon/apple-icon-152x152.png"
-  >
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="images/favicon/apple-icon-180x180.png"
-  >
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="images/favicon/android-icon-192x192.png"
-  >
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="images/favicon/favicon-32x32.png"
-  >
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="96x96"
-      href="images/favicon/favicon-96x96.png"
-  >
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="images/favicon/favicon-16x16.png"
-  >
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
     <link rel="manifest" href="images/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta
-      name="msapplication-TileImage"
-      content="images/favicon/ms-icon-144x144.png"
-  >
+    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="css/reset.css">
@@ -144,10 +93,7 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>온천도시 유성</h2>
-                      <p>
-                        다함께 더 좋은 유성!<br>과학과 온천의 관광도시
-                        유성입니다.
-                      </p>
+                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
                       <img src="images/gnb_obj.png" alt="">
                     </li>
                     <li>
@@ -176,10 +122,7 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>유성명소</h2>
-                      <p>
-                        다함께 더 좋은 유성!<br>과학과 온천의 관광도시
-                        유성입니다.
-                      </p>
+                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
                       <img src="images/gnb_obj.png" alt="">
                     </li>
                     <li>
@@ -207,10 +150,7 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>추천여행</h2>
-                      <p>
-                        다함께 더 좋은 유성!<br>과학과 온천의 관광도시
-                        유성입니다.
-                      </p>
+                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
                       <img src="images/gnb_obj.png" alt="">
                     </li>
                     <li>
@@ -242,10 +182,7 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>축제·공연</h2>
-                      <p>
-                        다함께 더 좋은 유성!<br>과학과 온천의 관광도시
-                        유성입니다.
-                      </p>
+                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
                       <img src="images/gnb_obj.png" alt="">
                     </li>
                     <li>
@@ -272,10 +209,7 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>숙박·음식·쇼핑</h2>
-                      <p>
-                        다함께 더 좋은 유성!<br>과학과 온천의 관광도시
-                        유성입니다.
-                      </p>
+                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
                       <img src="images/gnb_obj.png" alt="">
                     </li>
                     <li>
@@ -311,10 +245,7 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>여행 가이드</h2>
-                      <p>
-                        다함께 더 좋은 유성!<br>과학과 온천의 관광도시
-                        유성입니다.
-                      </p>
+                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
                       <img src="images/gnb_obj.png" alt="">
                     </li>
                     <li>
@@ -335,18 +266,13 @@
             </ul>
           </nav>
           <div class="sitemap">
-            <a href="#"
-              ><img src="images/menu.png" alt="사이트맵페이지로 이동"
-          ></a>
+            <a href="#"><img src="images/menu.png" alt="사이트맵페이지로 이동"></a>
           </div>
         </div>
       </header>
 
       <section id="main">
-        <h4 class="S_Core">
-          모이고 떠들고 먹고 즐기는<span class="ir_pm tit1">천년온천</span>
-          <span>유성의</span> <span class="ir_pm tit2">도시미학</span>
-        </h4>
+        <h4 class="S_Core">모이고 떠들고 먹고 즐기는<span class="ir_pm tit1">천년온천</span> <span>유성의</span> <span class="ir_pm tit2">도시미학</span></h4>
         <div class="inner">
           <div class="slider">
             <div class="slider_img">
@@ -457,10 +383,7 @@
       <!-- //id="pick" -->
       <section id="location">
         <h4 class="title S_Core">생생<span>VR</span></h4>
-        <p>
-          VR사이버 투어로 사계절 자연풍경 가득한 도시의 매력을 생생하게
-          경험하세요!
-        </p>
+        <p>VR사이버 투어로 사계절 자연풍경 가득한 도시의 매력을 생생하게 경험하세요!</p>
         <div class="inner">
           <div class="vr df">
             <div class="vr_slider pr">
@@ -547,36 +470,28 @@
                 <a href="#">
                   <h5>우리동네지도</h5>
                   <p>우리동네에 즐거움이 한가득!</p>
-                  <div class="more_btn">
-                    자세히보기
-                  </div>
+                  <div class="more_btn">자세히보기</div>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <h5>유성구 식도락</h5>
                   <p>유성구 맛집을 찾아서</p>
-                  <div class="more_btn">
-                   자세히보기
-                  </div>
+                  <div class="more_btn">자세히보기</div>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <h5>자전거 100리 길</h5>
                   <p>자전거를 타고 느끼는 도시의 매력</p>
-                  <div class="more_btn">
-                    자세히보기
-                  </div>
+                  <div class="more_btn">자세히보기</div>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <h5>하루를 부탁해</h5>
                   <p>유성구에서 편안한 하루</p>
-                  <div class="more_btn">
-                    자세히보기
-                  </div>
+                  <div class="more_btn">자세히보기</div>
                 </a>
               </li>
             </ul>
@@ -588,16 +503,10 @@
             <h5>공지사항</h5>
             <ul class="df">
               <li>
-                <a href="#">
-                  2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규
-                  주민사업체 모집 <span>22.05.10</span>
-                </a>
+                <a href="#"> 2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규 주민사업체 모집 <span>22.05.10</span> </a>
               </li>
               <li>
-                <a href="#">
-                  2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규
-                  주민사업체 모집 <span>22.05.10</span>
-                </a>
+                <a href="#"> 2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규 주민사업체 모집 <span>22.05.10</span> </a>
               </li>
             </ul>
           </div>
@@ -662,10 +571,7 @@
             <li><a href="#">사이트맵</a></li>
             <li><a href="#">찾아오시는길</a></li>
           </ul>
-          <address>
-            (우 00000) 대전광역시 유성구 대학로 211전화 : 042-000-0000 |
-            Copyright © 2022 KMJ. ALL RIGHTS RESERVED.
-          </address>
+          <address>(우 00000) 대전광역시 유성구 대학로 211전화 : 042-000-0000 | Copyright © 2022 KMJ. ALL RIGHTS RESERVED.</address>
         </div>
       </footer>
     </div>
